--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "npm" : "2.15.0"
   },  
   "name"         : "CassandraVis",
-  "version"      : "0.0.0",
+  "version"      : "0.0.1",
   "description"  : "Visualisation front-end using AngularJS, Node, D3.js",
   "license" : "BSD-3-Clause",
   "main"         : "server.js",
@@ -19,6 +19,7 @@
     "method-override": "^2.1.3",
     "mongoose"       : "^4.4.12",
     "morgan"         : "^1.1.1",
-    "serve-favicon"  : "^2.3.0"
+    "serve-favicon"  : "^2.3.0",
+    "cassandra-driver" : "^3.0.2"
   }
 }
