--- a/package.json
+++ b/package.json
@@ -1,25 +1,27 @@
 {
   "engines": {
     "node": "4.4.2",
-    "npm" : "2.15.0"
-  },  
-  "name"         : "CassandraVis",
-  "version"      : "0.0.3",
-  "description"  : "Visualisation front-end using AngularJS, Node, D3.js",
-  "license" : "BSD-3-Clause",
-  "main"         : "server.js",
-  "author"       : "RustamA",
-  "repository" :
-	  { "type" : "git"
-	  , "url" : "https://github.com/WanHrust/CassandraVis.git"
+    "npm": "2.15.0"
   },
-  "dependencies" : {
-    "body-parser"    : "^1.4.3",
-    "express"        : "^4.13.4",
+  "name": "CassandraVis",
+  "version": "0.0.3",
+  "description": "Visualisation front-end using AngularJS, Node, D3.js",
+  "license": "BSD-3-Clause",
+  "main": "server.js",
+  "author": "RustamA",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/WanHrust/CassandraVis.git"
+  },
+  "dependencies": {
+    "angular-bootstrap-datetimepicker": "^1.0.1",
+    "body-parser": "^1.4.3",
+    "cassandra-driver": "^3.0.2",
+    "express": "^4.13.4",
     "method-override": "^2.1.3",
-    "mongoose"       : "^4.4.12",
-    "morgan"         : "^1.1.1",
-    "serve-favicon"  : "^2.3.0",
-    "cassandra-driver" : "^3.0.2"
+    "moment": "^2.13.0",
+    "mongoose": "^4.4.12",
+    "morgan": "^1.1.1",
+    "serve-favicon": "^2.3.0"
   }
 }
