--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "angular-bootstrap-datetimepicker": "^1.0.1",
+    "angular-date-time-input": "^1.1.0",
     "body-parser": "^1.4.3",
     "cassandra-driver": "^3.0.2",
     "express": "^4.13.4",
