--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
     "npm": "2.15.0"
   },
   "name": "CassandraVis",
-  "version": "0.0.7",
-  "description": "Visualisation front-end using AngularJS, Node, D3.js",
-  "license": "BSD-3-Clause",
+  "version": "0.0.8",
+  "description": "Visualisation front-end using AngularJS, Node.js, D3.js",
+  "license": "MIT",
   "main": "server.js",
   "author": "RustamA",
   "repository": {
@@ -17,11 +17,11 @@
     "angular-bootstrap-datetimepicker": "^1.0.1",
     "angular-date-time-input": "^1.1.0",
     "body-parser": "^1.4.3",
+    "c3": "^0.4.11",
     "cassandra-driver": "^3.0.2",
     "express": "^4.13.4",
     "method-override": "^2.1.3",
     "moment": "^2.13.0",
-    "mongoose": "^4.4.12",
     "morgan": "^1.1.1",
     "serve-favicon": "^2.3.0"
   }
