--- a/package.json
+++ b/package.json
@@ -1,28 +1,35 @@
 {
-  "engines": {
-    "node": "4.4.2",
-    "npm": "2.15.0"
-  },
-  "name": "CassandraVis",
-  "version": "0.0.8",
-  "description": "Visualisation front-end using AngularJS, Node.js, D3.js",
-  "license": "MIT",
-  "main": "server.js",
-  "author": "RustamA",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/WanHrust/CassandraVis.git"
-  },
-  "dependencies": {
-    "angular-bootstrap-datetimepicker": "^1.0.1",
-    "angular-date-time-input": "^1.1.0",
-    "body-parser": "^1.4.3",
-    "c3": "^0.4.11",
-    "cassandra-driver": "^3.0.2",
-    "express": "^4.13.4",
-    "method-override": "^2.1.3",
-    "moment": "^2.13.0",
-    "morgan": "^1.1.1",
-    "serve-favicon": "^2.3.0"
-  }
+    "engines": {
+        "node": "4.4.2",
+        "npm": "2.15.0"
+    },
+    "name": "CassandraVis",
+    "version": "0.0.8",
+    "description": "Visualisation front-end using AngularJS, Node.js, D3.js",
+    "license": "MIT",
+    "main": "server.js",
+    "author": "RustamA",
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/WanHrust/CassandraVis.git"
+    },
+    "dependencies": {
+        "angular-bootstrap-datetimepicker": "^1.0.1",
+        "angular-date-time-input": "^1.1.0",
+        "body-parser": "^1.4.3",
+        "c3": "^0.4.11",
+        "cassandra-driver": "^3.0.2",
+        "express": "^4.13.4",
+        "method-override": "^2.1.3",
+        "moment": "^2.13.0",
+        "serve-favicon": "^2.3.0",
+        "bcrypt-nodejs": "0.0.3",
+        "express-session": "^1.13.0",
+        "passport": "^0.3.2",
+        "passport-local": "^1.0.0",
+        "passport-local-mongoose": "^4.0.0",
+        "morgan": "^1.7.0",
+        "express-session": "^1.13.0",
+        "mongoose": "^4.4.5"
+    }
 }
